# battle-snakes

./: Cargo.toml  README.md  config.json
crates/aspirin/: Cargo.toml
crates/aspirin/src/: codec.rs  lib.rs
src/: main.rs  shouts.rs
