[workspace.package]
name = "snake-fight"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/*"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "1"

[package]
name = "snake-fight"
version.workspace = true
edition.workspace = true

[dependencies]
aspirin = { path = "./crates/aspirin" }
warp = { version = "0.4", features = ["server"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
rand = "0.9"
http = "1.3.1"
